# cubic

./: CMakeLists.txt
resources/shaders/main/: fragment.glsl  vertex.glsl
src/cubic-client/: client.c  shader.c  shader.h  shader_program.c  shader_program.h  window.c  window.h
src/cubic-core/: core.c  file.c  file.h
src/cubic-core/net/: socket.c  socket.h
